qr code  сос тороны клиента заработали

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -32,6 +32,7 @@
     "qr": "QR",
     "loginClient": "Client Login",
     "register": "Register",
+    "verifyEmail": "Verify Email",
     "cashierLogin": "Cashier Login",
     "adminLogin": "Admin Login",
     "dashboard": "Dashboard",
@@ -51,6 +52,7 @@
     "darkTheme": "Dark theme",
     "login": "Login",
     "register": "Register",
+    "enterCode": "Enter Code",
     "createAccount": "Create Account",
     "confirm": "Confirm",
     "requestCode": "Request Code",
@@ -65,6 +67,7 @@
     "requestOtp": "Request OTP",
     "requestEmailCode": "Request Code",
     "confirmEmail": "Confirm Email",
+    "goToLogin": "Go to Login",
     "confirmPhone": "Confirm Phone",
     "changePassword": "Change Password",
     "save": "Save",
@@ -107,6 +110,7 @@
   "placeholders": {
     "email": "email",
     "password": "password",
+    "passwordRepeat": "repeat password",
     "emailCode": "email code",
     "phone": "phone",
     "phoneCode": "OTP",
