--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -32,6 +32,7 @@
     "qr": "QR-код",
     "loginClient": "Вход клиента",
     "register": "Регистрация",
+    "verifyEmail": "Подтвердить email",
     "cashierLogin": "Вход кассира",
     "adminLogin": "Вход администратора",
     "dashboard": "Дашборд",
@@ -51,6 +52,7 @@
     "darkTheme": "Темная тема",
     "login": "Войти",
     "register": "Регистрация",
+    "enterCode": "Ввести код",
     "createAccount": "Создать аккаунт",
     "confirm": "Подтвердить",
     "requestCode": "Запросить код",
@@ -65,6 +67,7 @@
     "requestOtp": "Запросить OTP",
     "requestEmailCode": "Запросить код",
     "confirmEmail": "Подтвердить email",
+    "goToLogin": "Перейти ко входу",
     "confirmPhone": "Подтвердить телефон",
     "changePassword": "Сменить пароль",
     "save": "Сохранить",
@@ -107,6 +110,7 @@
   "placeholders": {
     "email": "email",
     "password": "пароль",
+    "passwordRepeat": "повторите пароль",
     "emailCode": "код email",
     "phone": "телефон",
     "phoneCode": "OTP",
