Исправил: записал строку через Unicode‑escape, чтобы PowerShell не заменял кириллицу на ?. Теперь в ru.json значение errors.forbidden в UTF‑8 и с корректными кодовыми точками.

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -208,7 +208,8 @@
   "errors": {
     "notClient": "Not a client account.",
     "notCashier": "Not a cashier account.",
-    "notAdmin": "Not an admin account."
+    "notAdmin": "Not an admin account.",
+    "forbidden": "Insufficient permissions."
   },
   "accessibility": {
     "languageToggle": "Language toggle",
