--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -208,7 +208,8 @@
   "errors": {
     "notClient": "Это не клиентский аккаунт.",
     "notCashier": "Это не кассовый аккаунт.",
-    "notAdmin": "Это не админский аккаунт."
+    "notAdmin": "Это не админский аккаунт.",
+    "forbidden": "Недостаточно прав."
   },
   "accessibility": {
     "languageToggle": "Переключатель языка",
