--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -124,6 +124,8 @@
     "qrPayload": "данные qr",
     "amount": "сумма",
     "locationId": "id точки",
+    "firstName": "имя",
+    "lastName": "фамилия",
     "name": "название",
     "address": "адрес",
     "title": "заголовок",
@@ -180,6 +182,7 @@
     "passwordChanged": "Пароль изменён",
     "saved": "Сохранено",
     "created": "Создано",
+    "confirmDelete": "Удалить запись?",
     "refundSuccess": "Возврат: {points} балл(ов). Баланс: {balance}",
     "earnSuccess": "Начислено: {points} балл(ов). Баланс: {balance}",
     "qrRefresh": "QR-код обновляется каждые 5 секунд.",
