--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -193,6 +193,13 @@
   "rules": {
     "earnLabel": "Начисление: {percent}%",
     "minLabel": "Минимум: {amount}",
+    "allClients": "Все клиенты",
+    "selectedClients": "Выбранные клиенты: {count}",
+    "selectClients": "Выбрать клиентов",
+    "targetingLabel": "Таргетинг правила",
+    "helpEarnPercent": "Процент от суммы покупки, который начисляется баллами.",
+    "helpMinAmount": "Минимальная сумма покупки для начисления баллов.",
+    "helpTargeting": "Кому доступно это правило.",
     "locationLabel": "Точка: {location}",
     "tenant": "Организация",
     "help": "Правила определяют логику начисления баллов для клиентов. Вы можете задавать разные правила для разных точек или использовать правило по умолчанию.",
